--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "deep-clean": "rm -rf ./dist || true && rm tsconfig.tsbuildinfo || true",
-    "websocket": "vlcn-websocket --dbDir=./server-dbs --schemaDir=./schemas"
+    "websocket": "vlcn-websocket --dbDir=./server-dbs --schemaDir=./src/schemas"
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
