--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
-    "@vlcn.io/wa-crsqlite": "link:../crsqlite/js/browser/wa-crsqlite",
-    "@vlcn.io/xplat-api": "link:../crsqlite/js/xplat-api",
-    "@vlcn.io/rx-tbl": "link:../crsqlite/js/rx-tbl",
-    "@vlcn.io/client-websocket": "link:../crsqlite/js/sync-reference/client-websocket",
-    "@vlcn.io/react": "link:../crsqlite/js/react",
+    "@vlcn.io/wa-crsqlite": "0.7.2-next.0",
+    "@vlcn.io/xplat-api": "0.6.1-next.0",
+    "@vlcn.io/rx-tbl": "0.6.1-next.0",
+    "@vlcn.io/client-websocket": "0.6.2-next.0",
+    "@vlcn.io/react": "0.7.2-next.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vlcn.io/server-websocket": "link:../crsqlite/js/sync-reference/server-websocket"
+    "@vlcn.io/server-websocket": "0.6.2-next.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
