--- a/fly.toml
+++ b/fly.toml
@@ -36,3 +36,7 @@ processes = []
     interval = "15s"
     restart_limit = 0
     timeout = "2s"
+
+[mounts]
+  source="dbs"
+  destination="/mnt/dbs"
