--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "deep-clean": "rm -rf ./dist || true && rm tsconfig.tsbuildinfo || true"
   },
   "dependencies": {
-    "@vlcn.io/server-websocket": "0.6.2-next.0"
+    "@vlcn.io/server-websocket": "0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "vite": "^3.2.2",
     "@types/uuid": "^8.3.4",
-    "@vlcn.io/wa-crsqlite": "0.7.2-next.0",
-    "@vlcn.io/xplat-api": "0.6.1-next.0",
-    "@vlcn.io/rx-tbl": "0.6.1-next.0",
-    "@vlcn.io/client-websocket": "0.6.2-next.0",
-    "@vlcn.io/react": "0.7.2-next.0",
+    "@vlcn.io/client-websocket": "0.6.2",
+    "@vlcn.io/react": "0.7.2",
+    "@vlcn.io/rx-tbl": "0.6.1",
+    "@vlcn.io/sync-p2p": "0.6.1",
+    "@vlcn.io/wa-crsqlite": "0.7.2",
+    "@vlcn.io/xplat-api": "0.6.1",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0",
+    "vite": "^3.2.2"
   }
 }
