--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^8.3.4",
-    "@vlcn.io/client-websocket": "0.6.2",
-    "@vlcn.io/react": "0.7.2",
-    "@vlcn.io/rx-tbl": "0.6.1",
-    "@vlcn.io/sync-p2p": "0.6.2",
-    "@vlcn.io/wa-crsqlite": "0.7.2",
-    "@vlcn.io/xplat-api": "0.6.1",
+    "@vlcn.io/client-websocket": "0.6.3-next.1",
+    "@vlcn.io/react": "0.7.3-next.1",
+    "@vlcn.io/rx-tbl": "0.6.2-next.1",
+    "@vlcn.io/sync-p2p": "0.6.3-next.1",
+    "@vlcn.io/wa-crsqlite": "0.7.3-next.1",
+    "@vlcn.io/xplat-api": "0.6.2-next.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
