--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@vlcn.io/react": "0.9.0-next.0",
     "@vlcn.io/rx-tbl": "0.8.0-next.0",
     "@vlcn.io/sync-p2p": "0.7.1-next.0",
-    "@vlcn.io/wa-crsqlite": "0.8.0",
+    "@vlcn.io/crsqlite-wasm": "0.9.0-next.0",
     "@vlcn.io/xplat-api": "0.8.0-next.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
