--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^8.3.4",
-    "@vlcn.io/client-websocket": "0.8.1",
-    "@vlcn.io/react": "0.9.1",
-    "@vlcn.io/rx-tbl": "0.8.1",
+    "@vlcn.io/client-websocket": "0.8.2-next.3",
+    "@vlcn.io/react": "0.9.2-next.1",
+    "@vlcn.io/rx-tbl": "0.8.2-next.1",
     "@vlcn.io/sync-p2p": "0.7.2",
-    "@vlcn.io/crsqlite-wasm": "0.9.1",
+    "@vlcn.io/crsqlite-wasm": "0.9.2-next.1",
     "@vlcn.io/xplat-api": "0.8.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
