--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml file generated for vlcn-live-examples2 on 2023-04-14T08:24:20-04:00
 
-app = "vlcn-live-examples2"
+app = "vlcn-live-examples"
 kill_signal = "SIGINT"
 kill_timeout = 5
 primary_region = "iad"
