--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^8.3.4",
-    "@vlcn.io/client-websocket": "0.8.3-next.0",
-    "@vlcn.io/react": "0.9.3-next.0",
-    "@vlcn.io/rx-tbl": "0.8.3-next.0",
-    "@vlcn.io/sync-p2p": "0.7.3-next.0",
-    "@vlcn.io/crsqlite-wasm": "0.9.3-next.0",
-    "@vlcn.io/xplat-api": "0.8.2-next.0",
+    "@vlcn.io/client-websocket": "0.8.4",
+    "@vlcn.io/react": "0.9.3",
+    "@vlcn.io/rx-tbl": "0.8.3",
+    "@vlcn.io/sync-p2p": "0.7.3",
+    "@vlcn.io/crsqlite-wasm": "0.9.4",
+    "@vlcn.io/xplat-api": "0.8.2",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
