--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "live-examples-js",
+  "name": "vlcn-vite-starter",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "version": "0.0.1",
   "scripts": {
-    "start:ui": "vite",
-    "tsc": "tsc --noEmit",
-    "preview": "vite preview",
-    "bld": "vite build",
-    "start": "vlcn-websocket --dbDir=/mnt/dbs --schemaDir=./src/schemas --static=./dist",
-    "start:dev": "vlcn-websocket --dbDir=./server-dbs --schemaDir=./src/schemas --static=./dist",
-    "test:unit": "vitest",
-    "deep-clean": "rm -rf ./dist || true && rm tsconfig.tsbuildinfo || true"
+    "dev": "node ./slurp.mjs && node ./server.js --dev",
+    "start": "node ./slurp.mjs && node ./server.js",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@vlcn.io/server-websocket": "0.8.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/uuid": "^8.3.4",
-    "@vlcn.io/client-websocket": "0.8.4",
-    "@vlcn.io/react": "0.9.3",
-    "@vlcn.io/rx-tbl": "0.8.3",
-    "@vlcn.io/sync-p2p": "0.7.3",
-    "@vlcn.io/crsqlite-wasm": "0.9.4",
-    "@vlcn.io/xplat-api": "0.8.2",
-    "nanoid": "^4.0.0",
+    "@vlcn.io/crsqlite-wasm": "^0.10.2-next.1",
+    "@vlcn.io/direct-connect-browser": "^0.0.7-next.5",
+    "@vlcn.io/direct-connect-common": "^0.1.1",
+    "@vlcn.io/direct-connect-nodejs": "^0.1.2-next.0",
+    "@vlcn.io/react": "^0.10.3-next.4",
+    "@vlcn.io/rx-tbl": "^0.9.1",
+    "@vlcn.io/sync-p2p": "^0.8.1",
+    "@vlcn.io/xplat-api": "^0.9.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "uuid": "^9.0.0",
-    "vite": "^3.2.2"
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2"
   }
 }
